Initialize COM STA in the service process.

BUG=704754

Review-Url: https://codereview.chromium.org/2774653003
Cr-Commit-Position: refs/heads/master@{#459353}

Former-commit-id: d36381e3b65747fc7ea9df344129fa7ced3a0afe